@@ -23,7 +23,7 @@ public:
   virtual void DeInit();
   virtual __int64 Seek(__int64 iSeekTime);
   virtual int ReadPCM(BYTE *pBuffer, int size, int *actualsize);
-  virtual bool HandlesType(const char *type);
+  virtual bool CanInit();
 private:
   static unsigned __int32 AACOpenCallback(const char *pName, const char *mode, void *userData);
   static void AACCloseCallback(void *userData);
