@@ -52,7 +52,7 @@ public:
   virtual void DeInit();
   virtual __int64 Seek(__int64 iSeekTime);
   virtual int ReadPCM(BYTE *pBuffer, int size, int *actualsize);
-  virtual bool HandlesType(const char *type);
+  virtual bool CanInit();
 
 private:
   static size_t ReadCallback(void *ptr, size_t size, size_t nmemb, void *datasource);
