@@ -5,6 +5,7 @@
 *************************************************************************************************************
 
 added/fixed: (dd-mm-yyyy) (please specify date in CET)
+ - 08-07-2005 changed: simplified the way adding codecs to paplayer
  - 08-07-2005 fixed: my pictures, crash in background thumb loader if a directory contains zip/rar files
  - 08-07-2005 fixed: Scrolling of info labels wasn't working 100%.
  - 08-07-2005 added: Reading of disk number to the tag readers.  Sorting now sorts by disk then track number.  Only track number is displayed.
